# clang-tool-Template

./: README.md
clangPlugins/: CMakeLists.txt  MacroGuardPragma.cpp
clangPlugins/test/: print.c
include/testlib/: testlib.h
lib/testlib/: CMakeLists.txt
libtooling/: CMakeLists.txt
libtooling/lib/testlib/: testlib.cpp
tools/: CMakeLists.txt
tools/test-clang/: CMakeLists.txt  test-clang.cpp
